[package]
name = "boltz-client"
description = "a boltz exchange client for swaps between BTC/LBTC & LN"
authors = ["i5hi <ishi@satoshiportal.com>", "Rajarshi Maitra <raj@bitshala.org>"]
version = "0.2.0"
edition = "2021"
license = "MIT"

[lib]
name = "boltz_client"
path = "src/lib.rs"
doctest = false
crate-type = ["lib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
bip39 = "2.0.0"
bitcoin = { version = "0.32.2", features = ["rand", "base64", "rand-std"] }
elements = { version = "0.25.0", features = ["serde"] }
lightning-invoice = "0.32.0"
url = "2.5.0"
log = "^0.4"
env_logger = "0.7"
hex = "0.4"
lnurl-rs = { version = "0.8.0", optional = true }
reqwest = { version = "0.12.12", features = ["json"] }
tokio-tungstenite-wasm = { version = "0.5.0", features = ["native-tls"] }

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
electrum-client = { version = "0.21.0", default-features = false, features = ["use-rustls-ring", "proxy"] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }


[patch.crates-io]
secp256k1-zkp = { git = "https://github.com/danielgranhao/rust-secp256k1-zkp.git", rev = "e02a6d611f2844e0fb158537b4b3824d0341db61" }

[dev-dependencies]
futures-util = "0.3.31"

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dev-dependencies]
bitcoind = { version = "0.36.0", features = ["25_0"] }
elementsd = { version = "0.11.0", features = ["22_1_1"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
default = []
lnurl = ["dep:lnurl-rs"]
